fix alignement de la bulle d'info par rapport à l'image

--- a/webapp/app/assets/stylesheets/pages/recruteur/_matching.scss
+++ b/webapp/app/assets/stylesheets/pages/recruteur/_matching.scss
@@ -282,7 +282,7 @@
 
   .definitionMRS {
     display: block;
-    margin-left: 2em;
+    margin-left: 2.2em;
     margin-top: 1em;
   }
 
